# ahoum-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/accounts/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_roles_and_email_unique.py
apps/common/: errors.py  exceptions.py  pagination.py  urls.py
apps/common/management/commands/: seed_demo.py
apps/enrollments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/enrollments/migrations/: 0001_initial.py
apps/events/: admin.py  filters.py  models.py  serializers.py  views.py
apps/events/migrations/: 0001_initial.py
apps/notifications/: admin.py  emails.py  models.py  tasks.py
apps/notifications/migrations/: 0001_initial.py
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
docker/: entrypoint.sh
docs/: architecture.md  postman_collection.json
templates/emails/: follow_up.txt  otp.txt  reminder.txt
tests/: conftest.py  factories.py  test_auth.py  test_concurrency.py  test_enrollments.py  test_error_contract.py  test_events.py  test_notifications.py
