[project]
name = "ahoum-backend"
version = "0.1.0"
description = "Events platform backend — Django + DRF + Celery (Ahoum backend task)"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.4",
    "django-filter>=24.3",
    "drf-spectacular>=0.28",
    "django-environ>=0.11",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "gunicorn>=23.0",
    "whitenoise>=6.8",
    "honcho>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
